--- a/blogproject/blog/static/css/intro.css
+++ b/blogproject/blog/static/css/intro.css
@@ -1,24 +1,45 @@
-*{
-    background-color: aliceblue;
+* {
+  background-color: aliceblue;
 }
 
-.main{
-    text-align: center;
-    margin: 200px 500px 200px 40%;
-    width: 350px;
-    border-radius: 180%;
+.top {
+  text-align: center;
+  margin: 100px 500px 80px 40%;
+  width: 350px;
 }
-input{
-    width: 50px;
+input {
+  width: 50px;
 }
-p, input{
-    background-color: inherit;
+p,
+input {
+  background-color: inherit;
 }
-strong{
-    background-color:#03cafc;
-
+strong {
+  background-color: #03cafc;
 }
 
 .banner {
-    background-color: white;
+  background-color: white;
+  width: 300px;
+  height: 100px;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.left :nth-child(1) {
+  width: 350px;
+  height: 350px;
+  border-radius: 90%;
+}
+.right :first-child {
+  width: 350px;
+  border-radius: 90%;
+}
+p {
+  text-align: center;
+}
+.bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
