--- a/blogproject/blog/templates/intro.html
+++ b/blogproject/blog/templates/intro.html
@@ -9,11 +9,19 @@
         <link rel="stylesheet" href="{% static 'css/intro.css'%}">
     </head>
     <body>
-        <div class = "main">
+        <div class = "top">
             <div class="banner">
                 <p><strong>배지현의 Blog</strong>에 오신걸 환영합니다.</p>    
-                <p>입장하시겠습니까?</p>
-                <a href="{% url 'home' %}">네!</a>
+            </div>
+        </div>
+        <div class = "bottom">
+            <div class ="left">
+                <a href="{% url 'home' %}"><img src="{% static 'images/blog.png' %}"></a>
+                <p class ="text">my blog</p>
+            </div>
+            <div class ="right">
+                <a href="{% url 'myself' %}"><img src="{% static 'images/myself.jpg' %}"></a>
+                <p> myself</p>
             </div>
         </div>
     </body>
